--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>TIC TAC TOE</li>
+        </ul>
+    </nav>
+
+    <div class="gameContainer">
+        <div class="container">
+            <div class="cell bt-0 bl-0">
+                <span class="text"></span>
+            </div>
+            <div class="cell bt-0">
+                <span class="text"></span>
+            </div>
+            <div class="cell bt-0 br-0">
+                <span class="text"></span>
+            </div>
+            <div class="cell bl-0">
+                <span class="text"></span>
+            </div>
+            <div class="cell ">
+                <span class="text"></span>
+            </div>
+            <div class="cell br-0">
+                <span class="text"></span>
+            </div>
+            <div class="cell bl-0 bb-0">
+                <span class="text"></span>
+            </div>
+            <div class="cell bb-0">
+                <span class="text"></span>
+            </div>
+            <div class="cell bb-0 br-0">
+                <span class="text"></span>
+            </div>
+        </div>
+
+        <div class="gameinfo">
+            <h1>Welcome to Tic Tac Toe</h1>
+            <div>
+                <span class="info">Turn for X</span>
+                <button id="reset">Reset</button>
+            </div>
+        </div>
+    </div>
     
 </body>
 <script src="./script.js"></script>
